--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "颜色选择器",
   "main": "index.js",
   "authors": [
-    "laixiangran1"
+    "laixiangran"
   ],
   "license": "MIT",
   "keywords": [
